<resources>
    <string name="app_name">Now Loading</string>
    <string name="action_delete">Delete Game</string>
    <string name="action_save">Save Game</string>
    <string name="other_details">More Details</string>
    <string name="editor_failed">Failed to add to DB</string>
    <string name="editor_success">Successful add to DB</string>
    <string name="action_delete_all_entries">Delete All Games</string>

    <string name="condition_good">GOOD</string>
    <string name="condition_great">GREAT</string>
    <string name="condition_poor">POOR</string>
    <string name="insert_dummy">Add Dummy Game</string>
    <string name="delete_them">Delete Them!</string>
    <string name="save_them">Save Them!</string>
    <string name="initial_load">Initial database load will take longer than sequential database loading. There is a lot of data to apply.</string>
    <string name="gaming_database_loading">GAMING DATABASE LOADING</string>
    <string name="adding_items">Add items by clicking the floating button in the lower right corner of your screen.</string>
    <string name="click_to_update">Click the sell button to quickly sell an in-stock item.</string>
    <string name="long_press_for_prompt">Long press on an item to update or delete items in inventory</string>
    <string name="swipe_rules">When editing an item, you can choose to call or email the supplier if contact info is available.</string>
    <string name="current_onhand">ON-HAND:</string>
    <string name="suggested_price">SUGGESTED SALE PRICE:</string>
    <string name="current_on_hand_title">Current Quantity On-Hand:</string>
    <string name="release_title">Release Date:</string>
    <string name="suggested_retail_title">Suggested Retail Price:</string>
    <string name="developer_established_title">DEVELOPER ESTABLISHED:</string>
    <string name="developer_home_country">DEVELOPER HOME COUNTRY:</string>
    <string name="developer_name">DEVELOPER NAME:</string>
    <string name="developer_contact">DEVELOPER CONTACT #:</string>
    <string name="genre">Genre:</string>
    <string name="delete_all_games">DELETE ALL GAMES</string>
    <string name="add_new_game">ADD NEW GAME</string>
    <string name="inventory_stats">INVENTORY STATS</string>
    <string name="trash_them">Trash Them</string>
    <string name="keep_them">Keep Editing</string>
    <string name="are_you_sure">Are you sure you wish to delete this game?</string>
    <string name="delete_it">Delete it</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_are_you_sure">You have unsaved changes, are you sure you want to leave?</string>
    <string name="error_delete">Error deleting game details</string>
    <string name="success_delete">Game deleted successfully</string>
    <string name="that_escalated_quickly">Well that escalated quickly! 1000 is a lot…</string>
    <string name="quantity_zero">Selling last on-hand</string>
    <string name="already_have_barcode">Barcode Already Exists - Scan Not Allowed</string>
    <string name="no_network">No Network Connection - Scan Not Allowed</string>
    <string name="must_have_qty">Must have a quantity</string>
    <string name="upc_barcode_entry">UPC / Barcode Entry</string>
    <string name="key_barcode_here">Key Barcode Here</string>
    <string name="enter_a_game_name">Enter a Game Name</string>
    <string name="enter_a_quantity">Enter a Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="purchase_price">PURCHASE PRICE</string>
    <string name="sale_price">Sale Price</string>
    <string name="poor">POOR</string>
    <string name="good">GOOD</string>
    <string name="great">GREAT</string>
    <string name="there_are_no_games_in_the_database">There are no games in the database.</string>
    <string name="click_on_the_button_below_to_add_a_game">Click on the button below to add a game</string>
    <string name="email_supplier">Email Supplier</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="cant_be_blank">Quantity cannot be blank</string>
    <string name="valid_system">Please select a valid game system</string>
    <string name="now_sold_out">Item is now sold out</string>
    <string name="provide_a_supplier">Must provide a supplier</string>
    <string name="must_have_phone_or_email">Must have valid phone or email</string>
    <string name="to_err_is_human">Error updating Game Details</string>
    <string name="success_is_not_guaranteed">Successfully updated Game Details</string>
    <string name="yah_missed_sumfin">Please check entry boxes, you\'re missing something...</string>
    <string name="add_a_game">Add A Game</string>
    <string name="update_a_game">Update This Game</string>
    <string name="supplier_phone_unav">Supplier Phone Unavailable</string>
    <string name="supplier_email_unav">Supplier Email Unavailable</string>
    <string name="hint_phone">Supplier Phone Number</string>
    <string name="hint_email">Supplier Email Address (optional)</string>
    <string name="thats_sold_out">SOLD OUT</string>
</resources>
