<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadingActivity">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/default_text_size_24"
        android:text="@string/initial_load"/>

    <ProgressBar
        android:id="@+id/loading_progress_lower_end"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:indeterminate="true"
        android:scaleX="4"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:indeterminate="true"
        android:scaleX="4"
        android:layout_marginBottom="@dimen/margin_default_32dp"
        android:indeterminateTint="@color/colorAccentRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/loading_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/small_text_20sp"
        android:text="@string/gaming_database_loading"
        android:shadowRadius="2"
        android:shadowDy="2"
        android:shadowDx="2"
        android:shadowColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_default_32dp"
        android:layout_marginRight="@dimen/margin_default_32dp"
        app:layout_constraintTop_toBottomOf="@id/loading_progress_lower_end"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/hint_one"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin_4dp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/small_text_20sp"
            android:textColor="@color/colorPrimaryDarkText"
            android:text="@string/adding_items"/>
        <TextView
            android:id="@+id/hint_two"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin_4dp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/small_text_20sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/click_to_update"/>
        <TextView
            android:id="@+id/hint_three"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin_4dp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/small_text_20sp"
            android:textColor="@color/colorPrimaryLightText"
            android:text="@string/long_press_for_prompt"/>
        <TextView
            android:id="@+id/hint_four"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin_4dp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/small_text_20sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/swipe_rules"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>