<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/large_margin_16dp">

    <TextView
        android:id="@+id/game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/display_title_size"
        android:textStyle="bold"
        android:maxLines="2"
        android:ellipsize="end"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:shadowColor="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        tools:text="CALL OF DUTY: ADVANCED WARFARE"/>
    <RelativeLayout
        android:id="@+id/game_system_layout"
        app:layout_constraintTop_toBottomOf="@id/game_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="@dimen/med_margin_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/game_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="@dimen/large_text_28sp"
            tools:text="PLAYSTATION 4"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/game_genre_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/game_system_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/default_text_size_24"
        android:textStyle="bold"
        android:text="@string/genre"/>
    <TextView
        android:id="@+id/game_genre_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/game_system_layout"
        app:layout_constraintLeft_toRightOf="@id/game_genre_header"
        android:textSize="@dimen/default_text_size_24"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="First Person Shooter"/>
    <TextView
        android:id="@+id/game_released_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/game_genre_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/default_text_size_24"
        android:textStyle="bold"
        android:text="@string/release_title"/>
    <TextView
        android:id="@+id/game_released_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/game_genre_header"
        app:layout_constraintLeft_toRightOf="@id/game_released_header"
        android:textSize="@dimen/default_text_size_24"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="4-Nov-14"/>
    <TextView
        android:id="@+id/quantity_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/game_released_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/default_text_size_24"
        android:textStyle="italic"
        android:text="@string/current_on_hand_title" />
    <TextView
        android:id="@+id/quantity_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/med_margin_8dp"
        app:layout_constraintTop_toTopOf="@id/quantity_header"
        app:layout_constraintLeft_toRightOf="@id/quantity_header"
        android:textSize="@dimen/default_text_size_24"
        android:textColor="@color/colorAccentRed"
        tools:text="10" />

    <TextView
        android:id="@+id/suggested_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/med_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/quantity_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/default_text_size_24"
        android:textStyle="italic"
        android:text="@string/suggested_retail_title" />
    <TextView
        android:id="@+id/suggested_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/med_margin_8dp"
        app:layout_constraintTop_toTopOf="@id/suggested_header"
        app:layout_constraintLeft_toRightOf="@id/suggested_header"
        android:textSize="@dimen/default_text_size_24"
        android:textColor="@color/colorAccentRed"
        tools:text="$10.55" />
    <View
        android:id="@+id/dev_break_line_top"
        android:layout_marginTop="@dimen/med_margin_8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/suggested_header"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/developer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/med_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/dev_break_line_top"
        android:textSize="@dimen/small_text_20sp"
        android:textColor="@color/colorAccentRed"
        android:text="@string/developer_name"
        />
    <TextView
        android:id="@+id/developer_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/med_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/dev_break_line_top"
        app:layout_constraintLeft_toRightOf="@id/quantity_header"
        android:textSize="@dimen/small_text_20sp"
        android:textColor="@color/colorAccentRed"
        android:maxLines="2"
        tools:text="SLEDGEHAMMER GAMES "
        />
    <TextView
        android:id="@+id/developer_home_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/med_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/developer_header"
        android:textSize="@dimen/small_text_20sp"
        android:textColor="@color/colorAccentRed"
        android:text="@string/developer_home_country"
        />
    <TextView
        android:id="@+id/developer_home_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/med_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/developer_header"
        app:layout_constraintLeft_toRightOf="@id/quantity_header"
        android:textSize="@dimen/small_text_20sp"
        android:textColor="@color/colorAccentRed"
        tools:text="USA "
        />
    <TextView
        android:id="@+id/developer_est_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/med_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/developer_home_header"
        android:textSize="@dimen/small_text_20sp"
        android:textColor="@color/colorAccentRed"
        android:text="@string/developer_established_title"
        />
    <TextView
        android:id="@+id/developer_est_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/med_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/developer_home_header"
        app:layout_constraintLeft_toRightOf="@id/quantity_header"
        android:textSize="@dimen/small_text_20sp"
        android:textColor="@color/colorAccentRed"
        tools:text="2009"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/med_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/developer_est_header"
        android:textSize="@dimen/small_text_20sp"
        android:textColor="@color/colorAccentRed"
        android:text="@string/developer_contact"
        />
    <TextView
        android:id="@+id/developer_phone_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/med_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/developer_est_header"
        app:layout_constraintLeft_toRightOf="@id/quantity_header"
        android:textSize="@dimen/small_text_20sp"
        android:textColor="@color/colorAccentRed"
        tools:text="1-888-280-4331"
        />

</android.support.constraint.ConstraintLayout>